The 'blog Twitter' sample now uses a JS formatter rather than an HTML+RDFa one.

--- a/_samples/rdfa/blog-twitter.html
+++ b/_samples/rdfa/blog-twitter.html
@@ -33,7 +33,7 @@
 	  <!--
 	    This loads a Fresnel format that will act on the triples.
 	  -->
-	  <link rel="argot:include" href="formats/twitter.html" />
+	  <link rel="argot:formatter" href="formats/twitter" />
 	</head>
 	<body style="background: silver; color: black;">
 	  <p>
@@ -43,16 +43,16 @@
 	  </p>
 	  <p>
   	  If you're interested in RDFa you might consider following
-  	  Mark Birbeck<span typeof="foaf:OnlineAccount"
+  	  Mark Birbeck (@<span typeof=""
   	    rel="foaf:accountServiceHomepage" resource="http://www.twitter.com/"
-  	    property="foaf:accountName" content="markbirbeck"></span>,
-      Ben Adida<span typeof="foaf:OnlineAccount"
+  	    property="foaf:accountName">markbirbeck</span>),
+      Ben Adida<span typeof=""
         rel="foaf:accountServiceHomepage" resource="http://www.twitter.com/"
         property="foaf:accountName" content="benadida"></span>,
-	  	Shane Maccarron<span typeof="foaf:OnlineAccount"
+	  	Shane Maccarron<span typeof=""
 	  		rel="foaf:accountServiceHomepage" resource="http://www.twitter.com/"
 	  		property="foaf:accountName" content="halindrome"></span>,
-	  	and Manu Sporny<span typeof="foaf:OnlineAccount"
+	  	and Manu Sporny<span typeof=""
   	    rel="foaf:accountServiceHomepage" resource="http://www.twitter.com/"
   	    property="foaf:accountName" content="manusporny"></span>.
 	  </p>
