--- a/_unit-tests/notify/main.html
+++ b/_unit-tests/notify/main.html
@@ -22,7 +22,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title>Unit test</title>
-    <script type="text/javascript" src="../ubiquity-loader.js" >/**/</script>
+    <script type="text/javascript" src="../../ubiquity-loader.js" >/**/</script>
     <script type="text/javascript" src="unit-test-loader.js">/**/</script>
   </head>
 	<body>
