1. Removed tracking of stray .bak file. 2. Juggle technique used for loading the RDFa test-suite, since it wasn't working reliably.

--- a/_unit-tests/rdfa/main.html
+++ b/_unit-tests/rdfa/main.html
@@ -1,12 +1,9 @@
 <!--
-  // Ubiquity provides a standards-based suite of browser enhancements for
-  // building a new generation of internet-related applications.
-  //
-  // The Ubiquity RDFa module adds RDFa support to the Ubiquity
-  // library.
-  //
-  // Copyright (C) 2007-8 Mark Birbeck
-  //
+	// backplanejs provides a standards-based suite of browser enhancements
+	// for building a new generation of internet-related applications.
+	//
+	// Copyright (C) 2007-9 Mark Birbeck
+	//
   // Licensed under the Apache License, Version 2.0 (the "License");
   // you may not use this file except in compliance with the License.
   // You may obtain a copy of the License at
@@ -22,10 +19,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title>Unit test</title>
-  	<script type="text/javascript">
-  		var mode = { unitTest: true };
-  	</script>
   	<script type="text/javascript" src="../../ubiquity-loader.js" >/**/</script>
+  	<script type="text/javascript" src="unit-test-loader.js">/**/</script>
   </head>
 	<body>
 	  Unit tests <a href="javascript:runTheTests();">Run</a>
