1. Reorganised backplane module to use rolled-up files. Also reorganised unit-test framework to make use of this. 2. Renamed the Yowl module to 'Notify', and then added it to the backplane. 3. Created roll-up for RDFa module, and altered unit-test framework accordingly.

--- a/_samples/notify/test-yowl-speech.html
+++ b/_samples/notify/test-yowl-speech.html
@@ -1,28 +1,9 @@
 <!DOCTYPE XHTML>
-<html
-	xmlns:smil="http://www.w3.org/2005/SMIL21/BasicAnimation"
-	xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ev="http://www.w3.org/2001/xml-events"
-	xmlns:js="http://www.formsplayer.com/inlineScript"
-	xmlns:xf="http://www.w3.org/2002/xforms"
-	xmlns:xsd="http://www.w3.org/2001/XMLSchema"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns:xfe="http://www.w3.org/2002/xforms/extensions"
-	xmlns:xi="http://www.w3.org/2001/XInclude"
-	xmlns:xlink="http://www.w3.org/1999/xlink"
-	xmlns:sshrc="sshrc"
->
+<html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title>Test Yowl</title>
-		<script type="text/javascript" src="http://yui.yahooapis.com/2.2.2/build/yahoo-dom-event/yahoo-dom-event.js"></script>
-		<script type="text/javascript" src="http://yui.yahooapis.com/2.2.2/build/animation/animation-min.js"></script>
-		<script type="text/javascript" src="http://yui.yahooapis.com/2.2.2/build/container/container_core-min.js"></script>
-		<script src="../yowl.js" type="text/javascript">/**/</script>
-	  <script src="../display-yui.js" type="text/javascript">/**/</script>
-	  <script src="../display-msagent.js" type="text/javascript">/**/</script>
-		<style type="text/css">
-		  @import url(../yowl.css);
-		</style>
+		<script src="../../deploy/backplane-1.0.js" type="text/javascript">/**/</script>
+		<script src="../../deploy/assets/display-msagent.js" type="text/javascript">/**/</script>
 
 		<script type="text/javascript">
 
@@ -188,12 +169,6 @@
 			}//testYowl()
 		</script>
 	</head>
-	<body style="background: url(img/fp-bg.png)">
-	  <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-	  </script>
-	  <script type="text/javascript">
-	    _uacct = "UA-2143567-1";
-	    urchinTracker();
-	  </script>
+	<body>
 	</body>
 </html>
