--- a/_samples/rdfa/blog-twitter.html
+++ b/_samples/rdfa/blog-twitter.html
@@ -28,7 +28,10 @@
 	  <!--
 	    This loads the RDFa parser.
 	  -->
-	  <script src="../../ubiquity-loader.js" type="text/javascript">/**/</script>
+	  <script src="../../deploy/rdfa-0.8.0.js" type="text/javascript">/**/</script>
+		<script type="text/javascript">
+			setTimeout(get_metadata, 2000);
+		</script>
 
 	  <!--
 	    This loads a Fresnel format that will act on the triples.
