--- a/_unit-tests/rdfa/main.html
+++ b/_unit-tests/rdfa/main.html
@@ -19,10 +19,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <title>Unit test</title>
-  	<script type="text/javascript" src="../../ubiquity-loader.js" >/**/</script>
-  	<script type="text/javascript" src="unit-test-loader.js">/**/</script>
+  	<script type="text/javascript" src="../../deploy/backplane.js" >/**/</script>
+  	<script type="text/javascript" src="../unit-test-runner.js">/**/</script>
   </head>
 	<body>
-	  Unit tests <a href="javascript:runTheTests();">Run</a>
 	</body>
 </html>
