--- a/_samples/notify/test-yowl.html
+++ b/_samples/notify/test-yowl.html
@@ -1,8 +1,8 @@
 <!DOCTYPE XHTML>
 <html	xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<title>Test Yowl</title>
-		<script src="../../ubiquity-loader.js" type="text/javascript">/**/</script>
+		<title>Test Notify</title>
+		<script src="../../deploy/backplane-1.0.js" type="text/javascript">/**/</script>
 
 		<script type="text/javascript">
 		  setTimeout(
@@ -169,12 +169,6 @@
 				}//if ( test data is enabled )
 		</script>
 	</head>
-  <body style="background: url(img/fp-bg.png)">
-		<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-		</script>
-		<script type="text/javascript">
-			_uacct = "UA-2143567-1";
-			urchinTracker();
-		</script>
+  <body>
 	</body>
 </html>
