--- a/_samples/notify/test-yowl.html
+++ b/_samples/notify/test-yowl.html
@@ -2,7 +2,7 @@
 <html	xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title>Test Notify</title>
-		<script src="../../deploy/backplane-1.0.js" type="text/javascript">/**/</script>
+		<script src="../../deploy/backplane.js" type="text/javascript">/**/</script>
 
 		<script type="text/javascript">
 		  setTimeout(
