Updated RDFa Twitter sample to use the generated file.

--- a/_samples/rdfa/blog-twitter.html
+++ b/_samples/rdfa/blog-twitter.html
@@ -28,7 +28,7 @@
 	  <!--
 	    This loads the RDFa parser.
 	  -->
-	  <script src="../../deploy/rdfa-0.8.0.js" type="text/javascript">/**/</script>
+	  <script src="../../deploy/backplane.js" type="text/javascript">/**/</script>
 		<script type="text/javascript">
 			setTimeout(get_metadata, 2000);
 		</script>
@@ -49,7 +49,6 @@
   	  Mark Birbeck (@<span typeof=""
   	    rel="foaf:accountServiceHomepage" resource="http://www.twitter.com/"
   	    property="foaf:accountName">markbirbeck</span>),
-	  	<!--
       Ben Adida<span typeof=""
         rel="foaf:accountServiceHomepage" resource="http://www.twitter.com/"
         property="foaf:accountName" content="benadida"></span>,
@@ -59,7 +58,6 @@
 	  	and Manu Sporny<span typeof=""
   	    rel="foaf:accountServiceHomepage" resource="http://www.twitter.com/"
   	    property="foaf:accountName" content="manusporny"></span>.
-  	  -->
 	  </p>
 	</body>
 </html>
