Minor changes to the Twitter sample's layout.

--- a/_samples/rdfa/blog-twitter.html
+++ b/_samples/rdfa/blog-twitter.html
@@ -34,7 +34,7 @@
 		</script>
 
 	  <!--
-	    This loads a Fresnel format that will act on the triples.
+	    This loads a Fresnel formatter that will act on the triples.
 	  -->
 	  <link rel="argot:formatter" href="formats/twitter" />
 	</head>
@@ -49,15 +49,15 @@
   	  Mark Birbeck (@<span typeof=""
   	    rel="foaf:accountServiceHomepage" resource="http://www.twitter.com/"
   	    property="foaf:accountName">markbirbeck</span>),
-      Ben Adida<span typeof=""
+	  	Ben Adida (@<span typeof=""
         rel="foaf:accountServiceHomepage" resource="http://www.twitter.com/"
-        property="foaf:accountName" content="benadida"></span>,
-	  	Shane Maccarron<span typeof=""
+        property="foaf:accountName">benadida</span>),
+	  	Shane Maccarron (@<span typeof=""
 	  		rel="foaf:accountServiceHomepage" resource="http://www.twitter.com/"
-	  		property="foaf:accountName" content="halindrome"></span>,
-	  	and Manu Sporny<span typeof=""
+	  		property="foaf:accountName">halindrome</span>),
+	  	and Manu Sporny (@<span typeof=""
   	    rel="foaf:accountServiceHomepage" resource="http://www.twitter.com/"
-  	    property="foaf:accountName" content="manusporny"></span>.
+  	    property="foaf:accountName">manusporny</span>).
 	  </p>
 	</body>
 </html>
