--- a/_samples/rdfa/blog-twitter.html
+++ b/_samples/rdfa/blog-twitter.html
@@ -19,12 +19,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title>RDFa Twitter sample</title>
-		<script src="../../deploy/backplane.js" type="text/javascript">/**/</script>
+		<script src="http://backplanejs.googlecode.com/files/backplane-0.1.0-min.js" type="text/javascript">/**/</script>
+		<link rel="stylesheet" href="http://backplanejs.googlecode.com/files/backplane-0.1.0-min.css" />
 
 		<script src="formats/twitter.js" type="text/javascript">/**/</script>
 		<link rel="stylesheet" href="formats/twitter.css" />
-		<link rel="stylesheet" href="../../deploy/assets/yowl.css" />
-		<link rel="stylesheet" href="../../deploy/assets/container.css" />
 	</head>
 	<body style="background: silver; color: black;">
 		<p>
