--- a/_samples/notify/test-yowl.html
+++ b/_samples/notify/test-yowl.html
@@ -2,7 +2,8 @@
 <html	xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title>Test Notify</title>
-		<script src="../../deploy/backplane.js" type="text/javascript">/**/</script>
+		<script src="http://backplanejs.googlecode.com/files/backplane-0.1.0-min.js" type="text/javascript">/**/</script>
+		<link rel="stylesheet" href="http://backplanejs.googlecode.com/files/backplane-0.1.0-min.css" />
 
 		<script type="text/javascript">
 		  setTimeout(
