--- a/tools/tests/unit.html
+++ b/tools/tests/unit.html
@@ -16,10 +16,15 @@
   // See the License for the specific language governing permissions and
   // limitations under the License.
 -->
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html
+	xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:xf="http://www.w3.org/2002/xforms"
+>
   <head>
     <title>Unit test</title>
-  	<script type="text/javascript" src="../../deploy/backplane.js" >/**/</script>
+  	<script type="text/javascript" src="/backplanejs-0.4.0/backplane.js">/**/</script>
+  	<link rel="stylesheet" href="/backplanejs-0.4.0/backplane.js">
+
   	<script type="text/javascript" src="../unit-test-runner.js">/**/</script>
   </head>
 	<body>
