--- a/_samples/rdfa/blog-twitter.html
+++ b/_samples/rdfa/blog-twitter.html
@@ -19,8 +19,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title>RDFa Twitter sample</title>
-		<script src="http://backplanejs.googlecode.com/files/backplane-0.3.0-min.js" type="text/javascript">/**/</script>
-		<link rel="stylesheet" href="http://backplanejs.googlecode.com/files/backplane-0.3.0-min.css" />
+		<script src="/backplanejs-0.5.0/backplane.js" type="text/javascript">/**/</script>
+		<link rel="stylesheet" href="/backplanejs-0.5.0/assets/backplane.css" />
 
 		<script src="formats/twitter.js" type="text/javascript">/**/</script>
 		<link rel="stylesheet" href="formats/twitter.css" />
