Samples are now deployed to GAE.

--- a/_samples/notify/test-yowl.html
+++ b/_samples/notify/test-yowl.html
@@ -2,8 +2,8 @@
 <html	xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title>Test Notify</title>
-		<script src="http://backplanejs.googlecode.com/files/backplane-0.1.0-min.js" type="text/javascript">/**/</script>
-		<link rel="stylesheet" href="http://backplanejs.googlecode.com/files/backplane-0.1.0-min.css" />
+		<script src="../../deploy/backplanejs-0.5.0/backplane-min.js" type="text/javascript">/**/</script>
+		<link rel="stylesheet" href="../../deploy/backplanejs-0.5.0/assets/backplane-min.css" />
 
 		<script type="text/javascript">
 		  setTimeout(
@@ -154,12 +154,12 @@
 				            _notificationsList: new myList()
 				        }
 				    );
-		
+
 					/*
 					 * Let's pretend the user has changed the 'Friend twittered' message
 					 * to be 'sticky', which means it won't disappear until acknolwedged.
 					 */
-		
+
 				    app._notificationsList.add(
 				    	"Friend twittered",
 				    	{
