--- a/_samples/notify/test-yowl-systray.html
+++ b/_samples/notify/test-yowl-systray.html
@@ -2,10 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title>Test Yowl</title>
-		<script src="http://backplanejs.googlecode.com/files/backplane-0.1.0-min.js" type="text/javascript">/**/</script>
-		<link rel="stylesheet" href="http://backplanejs.googlecode.com/files/backplane-0.1.0-min.css" />
+		<script src="../../deploy/backplanejs-0.5.0/backplane-min.js" type="text/javascript">/**/</script>
+		<link rel="stylesheet" href="../../deploy/backplanejs-0.5.0/assets/backplane-min.css" />
 
-		<script src="../../deploy/assets/display-systray.js" type="text/javascript">/**/</script>
+		<script src="/assets/display-systray.js" type="text/javascript">/**/</script>
 
 		<script type="text/javascript">
 
@@ -43,7 +43,7 @@
       			]//array of registered applications
   			}
 			);
-			
+
 			/*
 			 * First register with Yowl. We tell it:
 			 *
