--- a/_samples/xforms/xforms-hint.html
+++ b/_samples/xforms/xforms-hint.html
@@ -26,8 +26,8 @@
 >
 	<head>
 	  <title>Using XForms hint</title>
-		<script src="../../deploy/backplanejs-0.4.0/backplane-min.js" type="text/javascript">/**/</script>
-		<link rel="stylesheet" href="../../deploy/backplanejs-0.4.0/assets/backplane.css" />
+		<script src="../../deploy/backplanejs-0.6.0/backplane.js" type="text/javascript">/**/</script>
+		<link rel="stylesheet" href="../../deploy/backplanejs-0.6.0/assets/backplane.css" />
 	  <style type="text/css">
 	    .sample {
   	    border: 1px solid silver;
