--- a/_samples/rdfa/blog-twitter.html
+++ b/_samples/rdfa/blog-twitter.html
@@ -19,8 +19,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title>RDFa Twitter sample</title>
-		<script src="../../deploy/backplanejs-0.6.0/backplane-min.js" type="text/javascript">/**/</script>
-		<link rel="stylesheet" href="../../deploy/backplanejs-0.6.0/assets/backplane-min.css" />
+		<script src="../../deploy/backplanejs-0.6.2/backplane.js" type="text/javascript">/**/</script>
+		<link rel="stylesheet" href="../../deploy/backplanejs-0.6.2/assets/backplane.css" />
 
 		<script src="formats/twitter.js" type="text/javascript">/**/</script>
 		<link rel="stylesheet" href="formats/twitter.css" />
