--- a/tools/tests/unit.html
+++ b/tools/tests/unit.html
@@ -22,8 +22,8 @@
 >
   <head>
     <title>Unit test</title>
-  	<script type="text/javascript" src="/backplanejs-0.6.2/backplane.js">/**/</script>
-  	<link rel="stylesheet" href="/backplanejs-0.6.2/backplane.js">
+  	<script type="text/javascript" src="/backplanejs-0.6.4/backplane.js">/**/</script>
+  	<link rel="stylesheet" href="/backplanejs-0.6.4/assets/backplane.css">
 
   	<script type="text/javascript" src="../unit-test-runner.js">/**/</script>
   </head>
