--- a/tools/tests/unit.html
+++ b/tools/tests/unit.html
@@ -26,6 +26,7 @@
   	<link rel="stylesheet" href="/backplanejs-0.6.4/assets/backplane.css">
 
   	<script type="text/javascript" src="../unit-test-runner.js">/**/</script>
+		<script type="text/javascript" src="unit-tests.js">/**/</script>
   </head>
 	<body>
 	</body>
